--- a/assets/sass/plugins/woocommerce/quick-view.scss
+++ b/assets/sass/plugins/woocommerce/quick-view.scss
@@ -248,6 +248,7 @@ ul.wc-block-grid__products {
 		position: relative;
 		width: 100%;
 		max-width: 800px;
+		max-height: 90vh;
 		background: var(--bt-color-content-cards-bg, #f5f5f5);
 		padding: 35px;
 		opacity: 0;
@@ -334,30 +335,15 @@ ul.wc-block-grid__products {
 				}
 			}
 
-			&.gallery-grid {
-				.woocommerce-product-gallery {
-					.woocommerce-product-gallery__wrapper {
-						display: grid;
-						grid-template-columns: 1fr 1fr;
-						gap: 25px;
-	
-						> div {
-							&:nth-child(1) {
-								grid-column: 1/3;
-							}
-	
-							& + div {
-								margin-top: 0;
-							}
-						}
-					}
-				}
-			}
-
 			&.gallery-showcase {
 				left: auto;
 				width: 100%;
 				transform: none;
+				padding: 0 !important;
+
+				&:before {
+					content: none;
+				}
 
 				.woocommerce-product-gallery {
 					flex: 0 0 100%;
@@ -368,15 +354,23 @@ ul.wc-block-grid__products {
 					}
 
 					.flex-control-thumbs {
-						flex-direction: row;
+						flex-direction: column;
 					}
+
+					span.onsale {
+						top: 20px !important;
+					}
+				}
+
+				.swiper-vertical {
+					margin: 0;
 				}
 			}
 
 			&.gallery-vertical {
 				.woocommerce-product-gallery {
-					.flex-control-thumbs {
-						flex-direction: row;
+					.flex-viewport {
+						margin-bottom: 0;
 					}
 				}
 			}
@@ -460,9 +454,27 @@ ul.wc-block-grid__products {
 					transform: translate3d(-70%, -50%, 0);
 				}
 			}
+
+			&.gallery-full-width {
+				padding: 0 !important;
+
+				&:before {
+					content: none;
+				}
+
+				.woocommerce-product-gallery {
+					margin: 0 !important;
+
+					span.onsale {
+						top: 20px !important;
+					}
+				}
+			}
 		}
 		.woocommerce-product-gallery {
 			width: 100%;
+			max-width: 100%;
+			flex: 0 0 100%;
 
 			&.hidden{
 				display: none;
